--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -303,21 +303,22 @@ Candidate’s Share: 50\% (1,500 \euro)
 \section*{Research Profiles}
 \noindent
 
-\textbullet \- \href{https://orcid.org/0000-0003-2333-6941}{ORCID}\\
-\textbullet \- \href{https://scholar.google.com/citations?user=yi3WXM8AAAAJ}{Google Scholar}\\
-\textbullet \- \href{https://www.semanticscholar.org/author/Anna-Xamb\%C3\%B3/1915531}{Semantic Scholar}\\
-\textbullet \- \href{http://www.researchgate.net/profile/Anna_Xambo}{ResearchGate}\\
 \textbullet \- \href{http://open.academia.edu/AnnaXambo}{Academia.edu}\\
-\textbullet \- \href{https://dora.dmu.ac.uk/browse?type=author&value=Xambo,\%20Anna}{DORA (De Montfort Open Research Archive)}\\
 \textbullet \- \href{https://app.cristin.no/persons/show.jsf?id=997893}{CRISTIN (Current Research Information System in Norway)}\\
+\textbullet \- \href{https://dora.dmu.ac.uk/browse?type=author&value=Xambo,\%20Anna}{DORA (De Montfort Open Research Archive)}\\
+\textbullet \- \href{https://scholar.google.com/citations?user=yi3WXM8AAAAJ}{Google Scholar}\\
 \textbullet \- \href{http://oro.open.ac.uk/view/person/ax22.html}{Open Research Online}\\
-\textbullet \- \href{https://publons.com/researcher/3980818/anna-xambo/}{Web of Science}
+\textbullet \- \href{https://orcid.org/0000-0003-2333-6941}{ORCID}\\
+\textbullet \- \href{http://www.researchgate.net/profile/Anna_Xambo}{ResearchGate}\\
+\textbullet \- \href{https://www.semanticscholar.org/author/Anna-Xamb\%C3\%B3/1915531}{Semantic Scholar}\\
+\textbullet \- \href{https://www.scopus.com/authid/detail.uri?authorId=36642886000}{SCOPUS}
+\textbullet \- \href{https://publons.com/researcher/3980818/anna-xambo}{Web of Science}
 %[1.2cm]%hack
 
 \section*{Publications}
 %\noindent
 
-\subsection*{Books}
+\subsection*{Books / Edited Books}
 \noindent
 
 \years{2020}\textbf{Xambó, A.},  Martín, S. R., Roma, G. (eds.) (2019). \emph{Proceedings of the International Web Audio Conference}. NTNU. ISSN: 2663-5844.\\
@@ -340,6 +341,7 @@ Candidate’s Share: 50\% (1,500 \euro)
 
 \subsection*{Journal Articles}
 \noindent
+{\years{2021}\textbf{Xambó, A.} (Submitted) ``Virtual Agents in Live Coding: A Short Review''. \emph{e-Contact!}, (online journal).\\
 {\years{2020a}\textbf{Xambó, A.}, Støckert, R., Jensenius, A.R. and Saue, S. ``Learning to Code Through Web Audio: A Team-Based Learning Approach''. \emph{Journal of Audio Engineering Society}, 68(10), pp. 727--737. \emph{Special Issue on Web Audio}.}\\
 \years{2019}\textbf{Xambó, A.}, Lerch, A., Freeman, J. “Music Information Retrieval in Live Coding: A Theoretical Framework". \emph{Computer Music Journal}, 42(4), Winter 2018, pp. 9--25.\\
 \years{2018b}Roma, G. and \textbf{Xambó, A.}, Freeman, J. (2018). “User-independent Accelerometer Gesture Recognition for Participatory Mobile Music". \emph{Journal of Audio Engineering Society}, 66(6), pp. 430--438.\\
@@ -353,7 +355,7 @@ Candidate’s Share: 50\% (1,500 \euro)
 \subsection*{Peer-Reviewed Conference Papers}
 \noindent
 
-{\years{2021}\textbf{Xambó, A.}, Roma, G., Roig, S., Solaz, E. (Accepted) ``Live Coding with the Cloud and a Virtual Agent''. \emph{Proceedings of the New Interfaces for Musical Expression (NIME '21)}. Shanghai, China.}\\
+{\years{2021}\textbf{Xambó, A.}, Roma, G., Roig, S., Solaz, E. (2021) ``Live Coding with the Cloud and a Virtual Agent''. \emph{Proceedings of the New Interfaces for Musical Expression (NIME '21)}. Shanghai, China.}\\
 {\years{2020b}\textbf{Xambó, A.}, Roma, G. (2020) ``Performing Audiences: Composition Strategies for Network Music using Mobile Phones''. \emph{Proceedings of the New Interfaces for Musical Expression (NIME '20)}. Birmingham, UK. pp. 55--60.}\\
 \years{2020a}Jawad, K., \textbf{Xambó, A.} (2020) ``How to Talk of Music Technology: An Interview Analysis Study of Live Interfaces for Music Performance among Expert Women''. In \emph{Proceedings of the International Conference on Live Interfaces (ICLI 2020)}. Trondheim, Norway. pp. 41--47.\\
 \years{2019b}\textbf{Xambó, A.}, Støckert, R., Jensenius, A.R. and Saue, S. (2019) ``Facilitating Team-Based Programming Learning with Web Audio''. In \emph{Proceedings of the Web Audio Conference 2019 (WAC '19)}. Trondheim, Norway. pp. 2--7. \emph{Best Paper Award}.\\
@@ -383,6 +385,8 @@ Candidate’s Share: 50\% (1,500 \euro)
 
 \subsection*{Peer-Reviewed Abstracts with Proceedings}
 \noindent
+\years{2021b}\textbf{Xambó, A.} (2021). ``Live Coding with Crowdsourced Sounds and A Virtual Agent Companion''. In \emph{Proceedings of the Web Audio Conference 2021 (WAC '21)}. Barcelona, Spain.\\
+\years{2021a}\textbf{Xambó, A.} (2021). ``A Live Coding Session With the Cloud and a Virtual Agent''. In \emph{Proceedings of the New Interfaces for Musical Expression (NIME '21)}. Shanghai, China.}\\
 \years{2019b}Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. (2019). ``Trondheim EMP Repository processing''. In \emph{Proceedings of the Web Audio Conference 2019 (WAC '19)}. Trondheim, Norway. pp. 161--162.\\
 \years{2019a}Støckert, R., Jensenius, A.R., \textbf{Xambó, A.}, Brandtsegg, Ø. (2019). ``A Case Study in Learning Spaces for Physical-Virtual Two-Campus Interaction''. In \emph{Proceedings of the European University Information Systems (EUNIS)}. \emph{Dørup Award winning paper}.\\ 
 Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. (2019). ``Trondheim EMP Repository processing''. In \emph{Proceedings of the Web Audio Conference 2019 (WAC '19)}. Trondheim, Norway. pp. 161--162.\\
@@ -415,9 +419,13 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 \subsection*{External}
 \noindent
 
-\years{2021d} \textsc{Keynote Speaker (online)} (Forthcoming). \emph{Web Audio Conference 2021 (SMC 2021)}. Barcelona, Spain.}\\ 
-\years{2021c} \textsc{Panel Member} (May 6, 2021). “Session 3: Musical performance \& education with AI". \emph{ARTIFICIA Festival}. Barcelona, Spain. \href{https://youtu.be/o0arHV4s6Mo}{[video]}\\ 
-\years{2021b} \textsc{Oral Presenter (online)} (April 29, 2021). “Insights Into MIRLCAuto: A Virtual Agent for Music Information Retrieval in Live Coding". \emph{Coding Literacy, Practices and Cultures / Colloquium}. University of Magdeburg, Germany, and Film University KONRAD WOLF in Potsdam Babelsberg, Germany.\\ 
+\years{2021f} \textsc{Keynote Speaker (online)} (July 5, 2021). \emph{Web Audio Conference 2021 (WAC 2021)}. Barcelona, Spain. \href{https://youtu.be/7SWu3txbg-w}{[video]}\\ 
+\years{2021f} \textsc{Oral Presenter (online)} together with Jawad, K.  (June 19, 2021). "Challenging the Status Quo - WoNoMute". \emph{Féminisme - Musique - Technologie / Rencontre ManiFeste-2021}.Centre Wallonie-Bruxelles, Paris, France. \href{https://youtu.be/jXmNvd9ty_o}{[video]}\\
+\years{2021e} \textsc{Oral Presenter (online)} (June 15, 2021). “Live Coding with the Cloud and a Virtual Agent". \emph{NIME '21}. 
+\emph{NYU Shanghai}, Shanghai, China. \href{https://youtu.be/F4UoH1hRMoU}{[video]}\\
+\years{2021d} \textsc{Panel Member (online)} (May 6, 2021). “Session 3: Musical performance \& education with AI" with Rafael Ramírez (Universitat Pompeu Fabra), George Waddell (Royal College of Music), Anna Xambó (De Montfort University), Luisa Pereira (New York University), Enric Guaus (Escola Superior de Música de Catalunya), Alia Ahmed Morsi (Universitat Pompeu Fabra) and moderated by Sergio Giraldo (Universitat Pompeu Fabra). \emph{ARTIFICIA Festival}. Barcelona, Spain. \href{https://youtu.be/o0arHV4s6Mo}{[video]}\\ 
+\years{2021c} \textsc{Oral Presenter (online)} (April 29, 2021). “Insights Into MIRLCAuto: A Virtual Agent for Music Information Retrieval in Live Coding". \emph{Coding Literacy, Practices and Cultures / Colloquium}. University of Magdeburg, Germany, and Film University KONRAD WOLF in Potsdam Babelsberg, Germany.\\ 
+\years{2021b} \textsc{Panel Member (online)} (April 16, 2021). “MusicLab 6: Human-Machine Improvisation" with Stefania Serafin (Aalborg University), Anna Xambó Sedó (De Montfort University), Nanette Nielsen (RITMO) and the performers, Christian Winther and Dag Erik Knedal Andersen, moderated by Alexander Refsum Jensenius (RITMO). \emph{RITMO Centre for Interdisciplinary Studies in Rhythm, Time and Motion}. Oslo, Norway. \href{https://youtu.be/yeIRxkm-kSc}{[video]}\\ 
 \years{2021a} \textsc{Oral Presenter (online)} (February 23, 2021). “Live Coding Using Crowdsourced Sounds and a Virtual Agent". \emph{ATLAS Seminar / Colloquium}. University of Colorado Boulder, Boulder, CO, USA.\\ 
 \years{2020c} \textsc{Oral Presenter (online)} (October 6, 2020). “From Tabletop Tangible Interfaces to Virtual Agents in Live Coding: Five Years of Research in Progress". \emph{IUPUI MAT PhD seminar}. Department of Music and Arts Technology, Purdue School of Engineering and Technology, Indiana University--Purdue University Indianapolis, Indianapolis, IN, USA.\\ 
 \years{2020b} \textsc{Oral Presenter (online)} (September 21, 2020). “Virtual Agents in Live Coding: Preliminary Investigations". \emph{Meetup for Women in Arts and Technology}. NOTAM, Oslo, Norway.\\ 
@@ -485,7 +493,9 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 \subsection*{Poster Presentations \& Demos}
 \noindent
 
-{\years{2020} \textsc{Online Poster Presenter} (July 23, 2020). ``Performing Audiences: Composition Strategies for Network Music using Mobile Phones''. \emph{NIME '20}. Birmingham, UK.}\\
+{\years{2021} \textsc{Poster Presenter (online)} (June 15, 2021). “Live Coding with the Cloud and a Virtual Agent". \emph{NIME '21}. 
+\emph{NYU Shanghai}, Shanghai, China.\\
+{\years{2020} \textsc{Poster Presenter (online)} (July 23, 2020). ``Performing Audiences: Composition Strategies for Network Music using Mobile Phones''. \emph{NIME '20}. Birmingham, UK.}\\
 \years{2018b} \textsc{Poster Presenter} together with Roma, G. (June 7, 2018). “Live Repurposing of Sounds: MIR Explorations with Personal and Crowdsourced Databases". \emph{NIME '18}. Blacksburg, Virginia, USA. \\
 \years{2018a} \textsc{Demo Presenter} together with Skach, S. (March 19, 2018). “Embodied Interactions with E-Textiles and the Internet of Sounds for Performing Arts". \emph{TEI '18}. Stockholm, Sweden. \\
 \years{2017c} \textsc{Poster Presenter}. (June 22, 2017). Authors: Weisling, A. and Xambó, A. “Constructing a Conceptual Framework for Collaborative Audiovisual Performance". \emph{ICCC '17}. Atlanta, GA, USA.\\
@@ -584,8 +594,8 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 \subsection*{Solo Performances}
 \noindent
 
-\years{2021d}\textbf{Xambó, A.} (Forthcoming). ``Live Coding with Crowdsourced Sounds and A Virtual Agent Companion''. \emph{WAC 21}. Online event. Barcelona, Spain.\\
-\years{2021c}\textbf{Xambó, A.} (Forthcoming). ``A Live Coding Session With the Cloud and a Virtual Agent''. \emph{NIME 21}. Online event. Shanghai, China.\\
+\years{2021d}\textbf{Xambó, A.} (July 6, 2021). ``Live Coding with Crowdsourced Sounds and A Virtual Agent Companion''. \emph{WAC 21}. Barcelona, Spain. Online event. Streaming from Sheffield, UK.\\
+\years{2021c}\textbf{Xambó, A.} (June 17, 2021). ``A Live Coding Session With the Cloud and a Virtual Agent''. \emph{NIME 21}. Shanghai, China. Online event. Streaming from Sheffield, UK.\\
 \years{2021b}\textbf{Xambó, A.} (May 6, 2021). ``Sonic Haikus''. \emph{ARTIFICIA Festival}. Online event. Barcelona, Spain.\\
 \years{2021a}\textbf{Xambó, A.} (February 21, 2021). ``They Are the Robots: a live coding session''. \emph{Transnodal TOPLAP}. Online event. Streaming from Sheffield, UK.\\
 \years{2020e}\textbf{Xambó, A.} (December 12, 2020). ``A live coding session''. \emph{Similar Sounds: A Virtual Agent in Live Coding}. IKLECTIK, London. Online event. Streaming from Sheffield, UK.\\
@@ -925,9 +935,10 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.\
 \subsection*{Conference Academic Chair / Meta-Reviewer / Local Chair}
 \noindent
 
-\years{2021}\textsc{Conference Programme Committee Member} (Meta-Reviewer). \emph{New Interfaces for Musical Expression} (2021).\\
-\years{2020e}\textsc{Conference Programme Committee Member} (Meta-Reviewer). \emph{ACM Creativity \& Cognition 2021}. Venice, Italy.\\
-\years{2020d}\textsc{Conference Programme Committee Member} (Meta-Reviewer). \emph{ACM Tangible, Embedded and Embodied Interaction 2021}. Salzburg, Austria.\\
+\years{2021b}\textsc{Conference Programme Committee Member} (Associate Chair). \emph{ACM Tangible, Embedded and Embodied Interaction 2022}. KAIST, Daejeon, Republic of Korea.\\
+\years{2021a}\textsc{Conference Programme Committee Member} (Meta-Reviewer). \emph{New Interfaces for Musical Expression} (2021).\\
+\years{2020e}\textsc{Conference Programme Committee Member} (Associate Chair). \emph{ACM Creativity \& Cognition 2021}. Venice, Italy.\\
+\years{2020d}\textsc{Conference Programme Committee Member} (Associate Chair). \emph{ACM Tangible, Embedded and Embodied Interaction 2021}. Salzburg, Austria.\\
 \years{2020c}\textsc{Conference Session Chair} (``Hardware and Software for SMC''). \emph{Sound and Music Computing Conference}. Torino, Italy.\\
 \years{2020b}\textsc{Conference Poster Co-Chair}. \emph{The 1st International Workshop on the Internet of Sounds}, 27th FRUCT Conference, University of Trento, Italy.\\ 
 \years{2020a}\textsc{Conference Programme Committee Member} (Meta-Reviewer). \emph{New Interfaces for Musical Expression} (2020).\\
@@ -936,18 +947,14 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.\
 \years{2019e}\textsc{Conference Programme Committee Member} (Meta-Reviewer). \emph{Web Audio Conference 2019}. Trondheim, Norway.\\ 
 \years{2019d}\textsc{Conference Session Chair} (``Mapping \& Sound Generation''). \emph{New Interfaces for Musical Expression 2019}. Porto Alegre, Brazil.\\ 
 \years{2019c}\textsc{Conference Paper Co-Chair}. \emph{New Interfaces for Musical Expression 2019}. Porto Alegre, Brazil.\\ 
-\years{2019b}\textsc{Conference Programme Committee Member} (Meta-Reviewer). \emph{ACM Tangible, Embedded and Embodied Interaction 2020}. Sydney, Australia.\\ 
-\years{2019a}\textsc{Conference Programme Committee Member} (Meta-Reviewer). \emph{ACM Creativity \& Cognition 2019}. San Diego, USA.\\ 
-%\years{2018b}\textsc{Conference Programme Committee Member}. \emph{Web Audio Conference 2018}. Berlin, Germany.\\ 
-\years{2018a}\textsc{Conference Programme Committee Member} (Meta-reviewer). \emph{ACM Spatial User Interaction 2018}. Berlin, Germany.\\ 
+\years{2019b}\textsc{Conference Programme Committee Member} (Associate Chair). \emph{ACM Tangible, Embedded and Embodied Interaction 2020}. Sydney, Australia.\\ 
+\years{2019a}\textsc{Conference Programme Committee Member} (Associate Chair). \emph{ACM Creativity \& Cognition 2019}. San Diego, USA.\\ 
+\years{2018a}\textsc{Conference Programme Committee Member} (Associate Chair). \emph{ACM Spatial User Interaction 2018}. Berlin, Germany.\\ 
 \years{2017d}\textsc{Conference Session Chair}. \emph{Web Audio Conference 2017}. London.\\
-%\years{2017c}\textsc{Conference Programme Committee Member}. \emph{Web Audio Conference 2017}. London.\\ 
-%\years{2017b}\textsc{Conference Programme Committee Member}. \emph{Second Conference on Computer Simulation of Musical Creativity}, Open University. Milton Keynes, UK.\\ 
 \years{2017a}\textsc{Conference Local Committee Member}. \emph{International Conference on Computational Creativity 2017}, Georgia Tech. Atlanta, GA, USA.\\
-%\years{2016b}\textsc{Conference Programme Committee Member}. \emph{International Conference on Live Interfaces 2016}, Brighton, UK.\\
 \years{2016}\textsc{Conference Music/Artworks Co-Chair}. \emph{Web Audio Conference 2016}, Georgia Tech. Atlanta, GA, USA.\\
 \years{2011b}\textsc{Conference Session Chair} (``Laptop/Coding/NI''). \emph{International Computer Music Conference}. Huddersfield, UK.\\
-\years{2011a}\textsc{Conference Committee Member}. \emph{CRC PhD Student Conference 2011}, OU. Milton Keynes, UK.
+\years{2011a}\textsc{Conference Committee Member}. \emph{CRC PhD Student Conference 2011}, OU. Milton Keynes, UK.\\
 
 \subsection*{Conference Programme Committee Member (Reviewer)}
 \noindent
@@ -965,7 +972,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.\
 \years{2017--2018}\emph{International Computer Music Conference -- ICMC Music} (2017, 2018).\\
 \years{2016, 2020}\emph{International Conference on Live Interfaces} (2016, 2020).\\
 \years{2016}\emph{ISSTA International Festival and Conference on Sound in the Arts, Science and Technology} (2016).\\
-\years{2016--2020}\emph{Web Audio Conference} (2016--2020).\\
+\years{2016--2020}\emph{Web Audio Conference} (2016--2021).\\
 \years{2015--2020}\emph{ACM Special Interest Group on Computer-Human Interaction} (2015--2021).\\
 \years{2013c}\emph{IEEE Interactive Tabletops and Surfaces} (2013).\\
 \years{2012--2018}\emph{ACM Designing Interactive Systems} (2012, 2016, 2018).\\
@@ -989,7 +996,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.\
 \subsection*{Book Reviewer}
 \noindent
 
-\years{2020}\emph{Routledge}.
+\years{2020--2021}\emph{Routledge}.
 
 %\subsection*{Panelist}
 %\noindent
@@ -1007,6 +1014,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.\
 \subsection*{Jury Member}
 \noindent
 
+\years{2021}\emph{Pamela Z Award for Innovation (NIME '21)}, NYU Shanghai, Shanghai, China.\\
 \years{2020}\emph{Pamela Z Award for Innovation (NIME '20)}, Royal Birmingham Conservatoire, Birmingham, UK.\\
 \years{2019}\emph{Pamela Z Award for Innovation (NIME '19)}, UFRGS, Porto Alegre, Brazil.\\
 \years{2018}\emph{COLLAB2018}, Institute of Electronic Music and Acoustics (IEM), University of Music and Performing Arts. Graz, Austria.\\
