--- a/Xambo.brief.CV.tex
+++ b/Xambo.brief.CV.tex
@@ -111,11 +111,11 @@ I have been working since 2000 as interaction designer, web designer and web dev
 
 {\textbf{Peer-Reviewed Journal Publications}} in Computer Music Journal (2019); Journal of Audio Engineering Society (2018, 2020); Interacting with Computers (2017); International Journal of Social Research Methodology, (2017); Qualitative Research (2017); ACM Transactions on Computer-Human Interaction (2013); and Information Processing \& Management (2013).\\
 
-{\textbf{Conference and Festival Participation}} at New Interfaces for Musical Expression (NIME) (2008, 2011, 2014, 2017--2020); Web Audio Conference (WAC) (2017--2019); Audio Mostly (2010, 2017--2018); Tangible, Embedded, and Embodied Interaction Conference (TEI) (2011, 2017--2018); International Conference on Computational Creativity (2017); International Conference on Live Coding (ICLC) (2019); International Society for Music Information Retrieval Conference (2016); Sound and Music Computing (SMC) Conference (2010, 2012, 2016); International Conference of Live Interfaces (ICLI) (2016, 2020); Research in Equity and Sustained Participation in Engineering, Computing, and Technology (2015); CHI (2014); International Workshop on Content-Based Multimedia Indexing (2013); British Computer Society Human-Computer Interaction (2011--2012); and International Computer Music Conference (2011).\\
+{\textbf{Conference and Festival Participation}} at New Interfaces for Musical Expression (NIME) (2008, 2011, 2014, 2017--2021); Web Audio Conference (WAC) (2017--2021); Audio Mostly (2010, 2017--2018); Tangible, Embedded, and Embodied Interaction Conference (TEI) (2011, 2017--2018); International Conference on Computational Creativity (2017); International Conference on Live Coding (ICLC) (2019); International Society for Music Information Retrieval Conference (2016); Sound and Music Computing (SMC) Conference (2010, 2012, 2016); International Conference of Live Interfaces (ICLI) (2016, 2020); Research in Equity and Sustained Participation in Engineering, Computing, and Technology (2015); CHI (2014); International Workshop on Content-Based Multimedia Indexing (2013); British Computer Society Human-Computer Interaction (2011--2012); and International Computer Music Conference (2011).\\
 
-{\textbf{Invited Keynote Talks}} at WAC (forthcoming); SMC (2020); Women in Sound Women on Sound (2016).\\
+{\textbf{Invited Keynote Talks}} at WAC (2021); SMC (2020); Women in Sound Women on Sound (2016).\\
 
-{\textbf{Performances}} at Network Music Festival (2020); Eulerroom Equinox (2020); PACE / DMU (2020); ICLC (2019); Dokkhuset (2018); Sonic Arts Research Center (2018); Inter/sections (2018); WAC (2017--2019); Cube Fest (2018); NIME (2017--2018); TEI Conference (2018); Audio Mostly (2017); Root Signals Festival (2017); Freedonia (2017); Women in Sound Women on Sound (2016); Phonos (2013); Niu (2012); Mostra Sonora i Visual (2006); Minima Festival (2004); and Sonar Festival (2002).\\
+{\textbf{Performances}} at Network Music Festival (2020); Eulerroom Equinox (2020); PACE / DMU (2020); ICLC (2019); Dokkhuset (2018); Sonic Arts Research Center (2018); Inter/sections (2018); WAC (2017--2021); Cube Fest (2018); NIME (2017--2018, 2021); TEI Conference (2018); Audio Mostly (2017); Root Signals Festival (2017); Freedonia (2017); Women in Sound Women on Sound (2016); Phonos (2013); Niu (2012); Mostra Sonora i Visual (2006); Minima Festival (2004); and Sonar Festival (2002).\\
 
 {\textbf{Conference Organizer}} for WAC (2019, general co-chair; 2017, session chair; 2016, music/artworks co-chair); NIME (2019, paper co-chair, session chair); ICLI (2020, conference local committee member); ACM Creativity \& Cognition (2019, programme committee member); ACM Spatial User Interaction (2018, programme committee member); Computational Creativity (2017, local committee member); International Computer Music Conference (2011, session chair); and TEI Conference (2020--2021, programme committee member).\\
 
