--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -617,6 +617,7 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 
 \subsection*{Collaborative Performances}
 \noindent
+\years{2021}Goudarzi, V., \textbf{Xambó, A.} (September 24, 2021). “Livesourcing: Audience Participation in a Live Coding Performance" (online performance). \emph{Ear Taxi Festival}. Chicago, IL, USA.\\
 \years{2020}Schroeder, F., Meireles, M., Mannone, M., Papadomanolaki, M., Brown, N., Stolfi, A., Alarcón, X., \textbf{Xambó, A.} (July 28, 2020). “Absurdity" (telematic performance by the Female Laptop Orchestra (FLO)). \emph{Physically Distant \#2: More Online Talks on Telematic Performance}. Streaming from Sheffield, UK.\\
 \years{2019}Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. (December 4, 2019). “Trondheim EMP Repository processing". \emph{WAC 2019}. Rockheim, Trondheim, Norway.\\
 \years{2018e}Brown, N., Chudy, M., Dobson, L., Hoel, A.M., Ikkache, L., Pase, T., Schroeder, F., Stolfi, A., Wilkie, S., \textbf{Xambó, A.} (November 22, 2018). “Transmusicking II". Sonic Arts Research Center, Queen's University Belfast. Belfast, Northern Ireland.\\
@@ -854,9 +855,10 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.\
 \section*{Assessment}
 \noindent
 
+\years{09/2021}External PhD examiner for Jack Armitage. PhD programme: Media \& Arts Technologies, Queen Mary University of London, UK.\\
 \years{02/2021}PhD review (midway assessment) for Sam Topley, PhD programme: DMU/Midlands4Cities. Leicester, UK.\\
 \years{05/2020}External assessor, IMV PhD Midway Assessment for Qichao Lan, Department of Musicology, Faculty of Humanities, University of Oslo, Norway.\\
-\years{08/2019}External MSc examiner, Torgrim Rudland Næss, Department of Informatics, Faculty of Mathematics and Natural Sciences, University of Oslo, Norway.\\
+\years{08/2019}External MSc examiner for Torgrim Rudland Næss, Department of Informatics, Faculty of Mathematics and Natural Sciences, University of Oslo, Norway.\\
 \years{11/2018--06/2019}Appraisal Committee Chair for Hilmar Thordarson, Norwegian Programme for Artistic PhD Research, Norwegian Science and Technology University, Trondheim, Norway.
 
 \section*{Additional Experience}
